coturn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn
  namespace: coturn
  labels:
    app: coturn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coturn
  template:
    metadata:
      labels:
        app: coturn
    spec:
      containers:
      - name: app
        image: registry.digitalocean.com/streetbot/coturn:latest
        command: ["/usr/bin/turnserver"]
        args: ["-L", "0.0.0.0", "-v", "--no-udp", "--web-admin", "--web-admin-ip=0.0.0.0"]
        ports:
        - containerPort: 3478
        - containerPort: 5349
        - containerPort: 8080
        volumeMounts:
          - name: tls-secret
            mountPath: "/app/tls"
            readOnly: true
      volumes:
        - name: tls-secret
          secret:
            secretName: coturn-tls-secret
