coturn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coturn
  namespace: coturn
spec:
  selector:
    app: coturn
  ports:
    - name: tcp
      protocol: TCP
      port: 3478
      targetPort: 3478
    - name: tcp-tls
      protocol: TCP
      port: 5349
      targetPort: 5349
    - name: web-admin
      protocol: TCP
      port: 8080
      targetPort: 8080
