coturn/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: coturn-web
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - streetbot-coturn-web.frankgu.me
    secretName: streetbot-coturn-web-tls
  rules:
  - host: streetbot-coturn-web.frankgu.me
    http:
      paths:
        - backend:
            serviceName: coturn
            servicePort: 8080
